--- a/TableTennisRules.html
+++ b/TableTennisRules.html
@@ -24,6 +24,7 @@
                 >Table Tennis Tournament 2023</a
               >
             </li>
+            <li><a href="Leaderboard.html"> Leaderboard</a></li>
           </ul>
         </nav>
       </div>
