--- a/TableTennisTournament2023.html
+++ b/TableTennisTournament2023.html
@@ -23,12 +23,13 @@
                 >Table Tennis Tournament 2023</a
               >
             </li>
+            <li><a href="Leaderboard.html"> Leaderboard</a></li>
           </ul>
         </nav>
       </div>
       <div class="header-main-signup">
         <ul>
-          <li><a href="#">Sign In (Coming Soon)</a></li>
+          <!-- <li><a href="#">Sign In (Coming Soon)</a></li> -->
         </ul>
       </div>
     </header>
