--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="header-main-signup">
         <ul>
-          <li><a href="#">Sign In (Coming Soon)</a></li>
+          <!-- <li><a href="#">Sign In (Coming Soon)</a></li> -->
         </ul>
       </div>
     </header>
@@ -46,7 +46,11 @@
         <h1>Referees</h1>
         <div class="header-sec-h1-textbox">
           <ul class="header-sec-ul-li">
-            <li>Bo Min</li>
+            <li>Mr MinJun Choi</li>
+            <li>Mr Terence Mitchell</li>
+            <li>Bo Min Kang</li>
+            <li>Min Chan Kang</li>
+            <li>Mohammad Al Hubail</li>
           </ul>
         </div>
       </div>
