--- a/Leaderboard.html
+++ b/Leaderboard.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="Styles/reset.css" />
     <link rel="stylesheet" href="Styles/main.css" />
+    <link rel="stylesheet" href="Styles/TableTennisRules.css" />
+    <link rel="stylesheet" href="Styles/animation.css" />
     <link rel="stylesheet" href="Styles/Leaderboard.css" />
   </head>
   <body>
@@ -23,6 +25,7 @@
                 >Table Tennis Tournament 2023</a
               >
             </li>
+            <li><a href="Leaderboard.html"> Leaderboard</a></li>
           </ul>
         </nav>
       </div>
@@ -32,106 +35,10 @@
         </ul>
       </div>
     </header>
-    <div class="leaderboard-container">
-      <table id="leaderboard-table">
-        <thead>
-          <tr>
-            <th>Rank</th>
-            <th>Player</th>
-            <th>Wins</th>
-            <th>Losses</th>
-            <th>ELO</th>
-            <th>League</th>
-            <th>Edit</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Player 1</td>
-            <td>5</td>
-            <td>3</td>
-            <td>1500</td>
-            <td>Gold</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Player 2</td>
-            <td>4</td>
-            <td>4</td>
-            <td>1400</td>
-            <td>Silver</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Player 3</td>
-            <td>7</td>
-            <td>1</td>
-            <td>1700</td>
-            <td>Platinum</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Player 4</td>
-            <td>6</td>
-            <td>2</td>
-            <td>1600</td>
-            <td>Gold</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Player 5</td>
-            <td>2</td>
-            <td>6</td>
-            <td>1200</td>
-            <td>Bronze</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>Player 6</td>
-            <td>2</td>
-            <td>6</td>
-            <td>1100</td>
-            <td>Bronze</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>Player 6</td>
-            <td>2</td>
-            <td>6</td>
-            <td>1100</td>
-            <td>Bronze</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>Player 6</td>
-            <td>2</td>
-            <td>6</td>
-            <td>1100</td>
-            <td>Bronze</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>Player 6</td>
-            <td>2</td>
-            <td>6</td>
-            <td>1100</td>
-            <td>Bronze</td>
-            <td><button class="edit-button">Edit</button></td>
-          </tr>
-          <link rel="stylesheet" href="leaderboard.css" />
-          <script src="leaderboard.js"></script>
-        </tbody>
-      </table>
-    </div>
-    <script src="JavaScript/Leaderboard.js"></script>
+    <iframe
+      id="sheet-iframe"
+      class="sheet-iframe"
+      src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTS4WlDFsB3HbwGIshZRpK9uNlkC1RQzJ-5gTFyjKyUj-av9waNouu4vVELwe3BH9N2E-_nEHOCRg_y/pubhtml?gid=0&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"
+    ></iframe>
   </body>
 </html>
