--- a/Leaderboard.html
+++ b/Leaderboard.html
@@ -31,7 +31,7 @@
       </div>
       <div class="header-main-signup">
         <ul>
-          <li><a href="#">Sign In (Coming Soon)</a></li>
+          <!-- <li><a href="#">Sign In (Coming Soon)</a></li> -->
         </ul>
       </div>
     </header>
