--- a/TableTennisTournament2023.html
+++ b/TableTennisTournament2023.html
@@ -37,19 +37,13 @@
       <iframe
         id="sheet-iframe"
         class="sheet-iframe"
-        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1NyCcTqDVkqGndWcV2nujgvSDoe-0irVrIPAUcdWPval4TkLqTmeltXXRHCO97N0EgjYLtpZGtXPa/pubhtml?gid=131414068&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1NyCcTqDVkqGndWcV2nujgvSDoe-0irVrIPAUcdWPval4TkLqTmeltXXRHCO97N0EgjYLtpZGtXPa/pubhtml?gid=568466927&single=true&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"
       ></iframe>
 
       <iframe
         id="sheet-iframe"
         class="sheet-iframe"
-        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1NyCcTqDVkqGndWcV2nujgvSDoe-0irVrIPAUcdWPval4TkLqTmeltXXRHCO97N0EgjYLtpZGtXPa/pubhtml?gid=1318541810&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"
-      ></iframe>
-      <iframe
-        id="sheet-iframe"
-        class="sheet-iframe"
-        style="height: 500px"
-        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1NyCcTqDVkqGndWcV2nujgvSDoe-0irVrIPAUcdWPval4TkLqTmeltXXRHCO97N0EgjYLtpZGtXPa/pubhtml?gid=1846704558&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1NyCcTqDVkqGndWcV2nujgvSDoe-0irVrIPAUcdWPval4TkLqTmeltXXRHCO97N0EgjYLtpZGtXPa/pubhtml?gid=760700341&single=true&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"
       ></iframe>
     </div>
   </body>
